frontend jquery 추가

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.2"
   },
@@ -33,7 +34,11 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {},
+    "globals": {
+      "$": true,
+      "jQuery": true
+    }
   },
   "browserslist": [
     "> 1%",
