--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,11 @@
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>nz.net.ultraq.thymeleaf</groupId>
+      <artifactId>thymeleaf-layout-dialect</artifactId>
+      <version>2.4.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
