shop-manage DB 연걸

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
 spring.mvc.static-path-pattern=/static/**
+
+file.upload.img-directory=./uploads/shop/images
+file.upload.file-directory=./uploads/shop/files
