--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,4 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
 spring.mvc.static-path-pattern=/static/**
 
-file.upload.img-directory=./uploads/shop/images
-file.upload.file-directory=./uploads/shop/files
+file.store.path=C:/uploads/shop/
