--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,11 @@
       <artifactId>thymeleaf-layout-dialect</artifactId>
       <version>2.4.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-s3</artifactId>
+      <version>1.11.867</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
