root context 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.contextPath=/seller-web
+
 spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
 spring.mvc.static-path-pattern=/static/**
